Add tests and set MessageType.Exception